# app-personal-contact

./: .env  .env.example  .gitattributes  .gitignore  LICENSE.md  README.md  SECURITY.md  docker-compose.yml
.github/workflows/: deploy-develop.yml  deploy-production.yml  post-merge-develop.yml
backend/: .bumpversion.cfg  CHANGELOG.md  Dockerfile  pyproject.toml  requirements.txt
backend/src/: app.py
frontend/: CHANGELOG.md  Dockerfile  contact-app.conf.template  nginx.conf  package-lock.json  package.json
frontend/src/: index.html  script.js  style.css
